add and update several files

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,88 +44,74 @@
        "      <th></th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>151700</td>\n",
-       "      <td>351102</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>155799</td>\n",
-       "      <td>354358</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>142857</td>\n",
-       "      <td>352716</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>152726</td>\n",
-       "      <td>349144</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>151008</td>\n",
-       "      <td>349692</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        0       1\n",
-       "0  151700  351102\n",
-       "1  155799  354358\n",
-       "2  142857  352716\n",
-       "3  152726  349144\n",
-       "4  151008  349692"
+       "     0    1    2    3\n",
+       "0  5.1  3.5  1.4  0.2\n",
+       "1  4.9  3.0  1.4  0.2\n",
+       "2  4.7  3.2  1.3  0.2\n",
+       "3  4.6  3.1  1.5  0.2\n",
+       "4  5.0  3.6  1.4  0.2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read dataset to be tested in clustering\n",
-    "df = pd.read_csv('unbalance.txt', sep=\" \", header=None)\n",
+    "df = pd.read_csv('iris_data.csv', header=None)\n",
+    "df.drop(4, axis=1, inplace=True)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.39662943, 0.91797881],\n",
-       "       [0.40248208, 0.91542786],\n",
-       "       [0.37539822, 0.92686363],\n",
-       "       ...,\n",
-       "       [0.81075656, 0.58538346],\n",
-       "       [0.80687506, 0.59072214],\n",
-       "       [0.79820051, 0.60239186]])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X = df.values\n",
-    "preprocessing.normalize(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +158,6 @@
     "    \"\"\"\n",
     "    list_data = list()\n",
     "    for i in range(total_trial):\n",
-    "        \"\"\"\n",
     "        model1 = kmeans(n_clusters=kmeans_total_cluster, method=\"random\")\n",
     "        model1.fit(X, epochs=epoch)\n",
     "        \n",
@@ -243,6 +228,7 @@
     "        p9.join()\n",
     "        \n",
     "        print(\"finnised trained the models\")\n",
+    "        \"\"\"\n",
     "        # get the value of silhouette score\n",
     "        ss1 = get_ss(X,model1.predict(X))\n",
     "        ss2 = get_ss(X,model2.predict(X))\n",
@@ -267,258 +253,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trial number 0\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 1\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 2\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 3\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 4\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 5\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 6\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 7\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 8\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 9\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 10\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 11\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 12\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 13\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 14\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 15\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 16\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 17\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 18\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 19\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 20\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 21\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 22\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 23\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 24\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 25\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 26\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 27\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 28\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 29\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 30\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 31\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 32\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 33\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 34\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 35\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 36\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 37\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 38\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 39\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 40\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 41\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 42\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 43\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 44\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 45\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 46\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 47\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 48\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 49\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 50\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 51\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 52\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 53\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 54\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 55\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 56\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 57\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 58\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 59\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 60\n",
-      "finnised trained the models\n",
-      "finnised evaluated the models\n",
-      "saving data\n",
-      "trial number 61\n"
+      "finised evaluated the models\n",
+      "saving data\n"
      ]
     }
    ],
@@ -527,11 +270,11 @@
     "test_values = df.values\n",
     "\n",
     "# normalize the data\n",
-    "test_values = preprocessing.normalize(X)\n",
+    "test_values = preprocessing.normalize(test_values)\n",
     "\n",
     "# create a table of silhouette score\n",
     "test_clustering_method(X = test_values, \n",
-    "                                total_trial = 100, \n",
+    "                                total_trial = 1, \n",
     "                                som_max_iteration = 500, \n",
     "                                som_lr = 0.5, \n",
     "                                som_nr = 4, \n",
