--- a/result_analysis.ipynb
+++ b/result_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,63 +50,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.463065</td>\n",
-       "      <td>0.402193</td>\n",
-       "      <td>0.205022</td>\n",
-       "      <td>0.455939</td>\n",
-       "      <td>0.413563</td>\n",
-       "      <td>0.441646</td>\n",
-       "      <td>0.224409</td>\n",
+       "      <td>0.804698</td>\n",
+       "      <td>0.829422</td>\n",
+       "      <td>0.545900</td>\n",
+       "      <td>0.861058</td>\n",
+       "      <td>0.501386</td>\n",
+       "      <td>0.440426</td>\n",
+       "      <td>0.835837</td>\n",
+       "      <td>0.496340</td>\n",
+       "      <td>0.694666</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.675293</td>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.457717</td>\n",
-       "      <td>0.154600</td>\n",
-       "      <td>0.545933</td>\n",
-       "      <td>0.588291</td>\n",
-       "      <td>0.398590</td>\n",
-       "      <td>0.455338</td>\n",
-       "      <td>-0.219745</td>\n",
+       "      <td>0.808746</td>\n",
+       "      <td>0.812297</td>\n",
+       "      <td>0.637061</td>\n",
+       "      <td>0.704290</td>\n",
+       "      <td>0.262494</td>\n",
+       "      <td>0.643603</td>\n",
+       "      <td>0.835837</td>\n",
+       "      <td>0.412662</td>\n",
+       "      <td>0.823326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.548528</td>\n",
-       "      <td>0.493736</td>\n",
-       "      <td>0.211824</td>\n",
-       "      <td>0.384290</td>\n",
-       "      <td>0.416028</td>\n",
-       "      <td>0.404463</td>\n",
-       "      <td>0.347690</td>\n",
-       "      <td>-0.003175</td>\n",
+       "      <td>0.805003</td>\n",
+       "      <td>0.820602</td>\n",
+       "      <td>0.662935</td>\n",
+       "      <td>0.835837</td>\n",
+       "      <td>0.434176</td>\n",
+       "      <td>0.835837</td>\n",
+       "      <td>0.835837</td>\n",
+       "      <td>0.641102</td>\n",
+       "      <td>0.454433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.516907</td>\n",
-       "      <td>0.514451</td>\n",
-       "      <td>0.488331</td>\n",
-       "      <td>0.281559</td>\n",
-       "      <td>0.347082</td>\n",
-       "      <td>0.542082</td>\n",
-       "      <td>0.374242</td>\n",
-       "      <td>0.234802</td>\n",
-       "      <td>0.448585</td>\n",
+       "      <td>0.812724</td>\n",
+       "      <td>0.813251</td>\n",
+       "      <td>0.638596</td>\n",
+       "      <td>0.669911</td>\n",
+       "      <td>-0.172054</td>\n",
+       "      <td>0.819307</td>\n",
+       "      <td>0.704746</td>\n",
+       "      <td>0.684856</td>\n",
+       "      <td>0.689535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.549082</td>\n",
-       "      <td>0.474679</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.428644</td>\n",
-       "      <td>0.430766</td>\n",
-       "      <td>0.341026</td>\n",
-       "      <td>0.410366</td>\n",
-       "      <td>0.664060</td>\n",
+       "      <td>0.833048</td>\n",
+       "      <td>0.812371</td>\n",
+       "      <td>0.686444</td>\n",
+       "      <td>0.597210</td>\n",
+       "      <td>0.643603</td>\n",
+       "      <td>0.523209</td>\n",
+       "      <td>0.537983</td>\n",
+       "      <td>0.487481</td>\n",
+       "      <td>0.791981</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -114,21 +114,21 @@
       ],
       "text/plain": [
        "   random kmeans  kde kmeans  kmeans++  random SOM  kmeans SOM  \\\n",
-       "0       0.684774    0.684774  0.463065    0.402193    0.205022   \n",
-       "1       0.675293    0.684774  0.457717    0.154600    0.545933   \n",
-       "2       0.684774    0.548528  0.493736    0.211824    0.384290   \n",
-       "3       0.516907    0.514451  0.488331    0.281559    0.347082   \n",
-       "4       0.684774    0.549082  0.474679         NaN    0.428644   \n",
+       "0       0.804698    0.829422  0.545900    0.861058    0.501386   \n",
+       "1       0.808746    0.812297  0.637061    0.704290    0.262494   \n",
+       "2       0.805003    0.820602  0.662935    0.835837    0.434176   \n",
+       "3       0.812724    0.813251  0.638596    0.669911   -0.172054   \n",
+       "4       0.833048    0.812371  0.686444    0.597210    0.643603   \n",
        "\n",
        "   kde kmeans SOM  kmeans++ SOM     SOM++   kde SOM  \n",
-       "0        0.455939      0.413563  0.441646  0.224409  \n",
-       "1        0.588291      0.398590  0.455338 -0.219745  \n",
-       "2        0.416028      0.404463  0.347690 -0.003175  \n",
-       "3        0.542082      0.374242  0.234802  0.448585  \n",
-       "4        0.430766      0.341026  0.410366  0.664060  "
+       "0        0.440426      0.835837  0.496340  0.694666  \n",
+       "1        0.643603      0.835837  0.412662  0.823326  \n",
+       "2        0.835837      0.835837  0.641102  0.454433  \n",
+       "3        0.819307      0.704746  0.684856  0.689535  \n",
+       "4        0.523209      0.537983  0.487481  0.791981  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,21 +148,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 50 entries, 0 to 49\n",
+      "RangeIndex: 61 entries, 0 to 60\n",
       "Data columns (total 9 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   random kmeans   43 non-null     float64\n",
-      " 1   kde kmeans      49 non-null     float64\n",
-      " 2   kmeans++        50 non-null     float64\n",
-      " 3   random SOM      44 non-null     float64\n",
-      " 4   kmeans SOM      50 non-null     float64\n",
-      " 5   kde kmeans SOM  50 non-null     float64\n",
-      " 6   kmeans++ SOM    50 non-null     float64\n",
-      " 7   SOM++           50 non-null     float64\n",
-      " 8   kde SOM         49 non-null     float64\n",
+      " 0   random kmeans   61 non-null     float64\n",
+      " 1   kde kmeans      61 non-null     float64\n",
+      " 2   kmeans++        61 non-null     float64\n",
+      " 3   random SOM      61 non-null     float64\n",
+      " 4   kmeans SOM      61 non-null     float64\n",
+      " 5   kde kmeans SOM  61 non-null     float64\n",
+      " 6   kmeans++ SOM    61 non-null     float64\n",
+      " 7   SOM++           61 non-null     float64\n",
+      " 8   kde SOM         61 non-null     float64\n",
       "dtypes: float64(9)\n",
-      "memory usage: 3.6 KB\n"
+      "memory usage: 4.4 KB\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,99 +210,99 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>43.000000</td>\n",
-       "      <td>49.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>44.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>49.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>61.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.643237</td>\n",
-       "      <td>0.626261</td>\n",
-       "      <td>0.482232</td>\n",
-       "      <td>0.319095</td>\n",
-       "      <td>0.369411</td>\n",
-       "      <td>0.367928</td>\n",
-       "      <td>0.391831</td>\n",
-       "      <td>0.399061</td>\n",
-       "      <td>0.325376</td>\n",
+       "      <td>0.819159</td>\n",
+       "      <td>0.813473</td>\n",
+       "      <td>0.618012</td>\n",
+       "      <td>0.693520</td>\n",
+       "      <td>0.701473</td>\n",
+       "      <td>0.677770</td>\n",
+       "      <td>0.621770</td>\n",
+       "      <td>0.619107</td>\n",
+       "      <td>0.739507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.068817</td>\n",
-       "      <td>0.068227</td>\n",
-       "      <td>0.017992</td>\n",
-       "      <td>0.202811</td>\n",
-       "      <td>0.158355</td>\n",
-       "      <td>0.178029</td>\n",
-       "      <td>0.042012</td>\n",
-       "      <td>0.058481</td>\n",
-       "      <td>0.196199</td>\n",
+       "      <td>0.010744</td>\n",
+       "      <td>0.010611</td>\n",
+       "      <td>0.053229</td>\n",
+       "      <td>0.205709</td>\n",
+       "      <td>0.214761</td>\n",
+       "      <td>0.224464</td>\n",
+       "      <td>0.175790</td>\n",
+       "      <td>0.099741</td>\n",
+       "      <td>0.171969</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.407620</td>\n",
-       "      <td>0.514451</td>\n",
-       "      <td>0.378856</td>\n",
-       "      <td>-0.274155</td>\n",
-       "      <td>-0.246741</td>\n",
-       "      <td>-0.254390</td>\n",
-       "      <td>0.248112</td>\n",
-       "      <td>0.234802</td>\n",
-       "      <td>-0.219745</td>\n",
+       "      <td>0.800677</td>\n",
+       "      <td>0.761462</td>\n",
+       "      <td>0.522411</td>\n",
+       "      <td>0.000431</td>\n",
+       "      <td>-0.172054</td>\n",
+       "      <td>0.058380</td>\n",
+       "      <td>0.255623</td>\n",
+       "      <td>0.399404</td>\n",
+       "      <td>0.201198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.658375</td>\n",
-       "      <td>0.549082</td>\n",
-       "      <td>0.478405</td>\n",
-       "      <td>0.215283</td>\n",
-       "      <td>0.307347</td>\n",
-       "      <td>0.276519</td>\n",
-       "      <td>0.375808</td>\n",
-       "      <td>0.362960</td>\n",
-       "      <td>0.229901</td>\n",
+       "      <td>0.812210</td>\n",
+       "      <td>0.806601</td>\n",
+       "      <td>0.549835</td>\n",
+       "      <td>0.636704</td>\n",
+       "      <td>0.633966</td>\n",
+       "      <td>0.642380</td>\n",
+       "      <td>0.467525</td>\n",
+       "      <td>0.536706</td>\n",
+       "      <td>0.719996</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.675293</td>\n",
-       "      <td>0.675293</td>\n",
-       "      <td>0.486972</td>\n",
-       "      <td>0.284617</td>\n",
-       "      <td>0.377145</td>\n",
-       "      <td>0.409732</td>\n",
-       "      <td>0.400151</td>\n",
-       "      <td>0.409669</td>\n",
-       "      <td>0.336640</td>\n",
+       "      <td>0.814218</td>\n",
+       "      <td>0.813131</td>\n",
+       "      <td>0.646230</td>\n",
+       "      <td>0.774243</td>\n",
+       "      <td>0.806392</td>\n",
+       "      <td>0.793325</td>\n",
+       "      <td>0.670552</td>\n",
+       "      <td>0.655008</td>\n",
+       "      <td>0.804698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.683825</td>\n",
-       "      <td>0.683825</td>\n",
-       "      <td>0.491564</td>\n",
-       "      <td>0.454084</td>\n",
-       "      <td>0.496476</td>\n",
-       "      <td>0.471233</td>\n",
-       "      <td>0.423127</td>\n",
-       "      <td>0.435719</td>\n",
-       "      <td>0.461883</td>\n",
+       "      <td>0.832683</td>\n",
+       "      <td>0.814818</td>\n",
+       "      <td>0.659151</td>\n",
+       "      <td>0.835837</td>\n",
+       "      <td>0.835837</td>\n",
+       "      <td>0.833854</td>\n",
+       "      <td>0.781331</td>\n",
+       "      <td>0.675690</td>\n",
+       "      <td>0.835837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.498721</td>\n",
-       "      <td>0.684774</td>\n",
-       "      <td>0.608383</td>\n",
-       "      <td>0.675293</td>\n",
-       "      <td>0.440806</td>\n",
-       "      <td>0.507760</td>\n",
-       "      <td>0.684774</td>\n",
+       "      <td>0.835052</td>\n",
+       "      <td>0.835662</td>\n",
+       "      <td>0.687405</td>\n",
+       "      <td>0.861058</td>\n",
+       "      <td>0.861058</td>\n",
+       "      <td>0.861058</td>\n",
+       "      <td>0.835837</td>\n",
+       "      <td>0.798599</td>\n",
+       "      <td>0.861058</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -310,33 +310,53 @@
       ],
       "text/plain": [
        "       random kmeans  kde kmeans   kmeans++  random SOM  kmeans SOM  \\\n",
-       "count      43.000000   49.000000  50.000000   44.000000   50.000000   \n",
-       "mean        0.643237    0.626261   0.482232    0.319095    0.369411   \n",
-       "std         0.068817    0.068227   0.017992    0.202811    0.158355   \n",
-       "min         0.407620    0.514451   0.378856   -0.274155   -0.246741   \n",
-       "25%         0.658375    0.549082   0.478405    0.215283    0.307347   \n",
-       "50%         0.675293    0.675293   0.486972    0.284617    0.377145   \n",
-       "75%         0.683825    0.683825   0.491564    0.454084    0.496476   \n",
-       "max         0.684774    0.684774   0.498721    0.684774    0.608383   \n",
+       "count      61.000000   61.000000  61.000000   61.000000   61.000000   \n",
+       "mean        0.819159    0.813473   0.618012    0.693520    0.701473   \n",
+       "std         0.010744    0.010611   0.053229    0.205709    0.214761   \n",
+       "min         0.800677    0.761462   0.522411    0.000431   -0.172054   \n",
+       "25%         0.812210    0.806601   0.549835    0.636704    0.633966   \n",
+       "50%         0.814218    0.813131   0.646230    0.774243    0.806392   \n",
+       "75%         0.832683    0.814818   0.659151    0.835837    0.835837   \n",
+       "max         0.835052    0.835662   0.687405    0.861058    0.861058   \n",
        "\n",
        "       kde kmeans SOM  kmeans++ SOM      SOM++    kde SOM  \n",
-       "count       50.000000     50.000000  50.000000  49.000000  \n",
-       "mean         0.367928      0.391831   0.399061   0.325376  \n",
-       "std          0.178029      0.042012   0.058481   0.196199  \n",
-       "min         -0.254390      0.248112   0.234802  -0.219745  \n",
-       "25%          0.276519      0.375808   0.362960   0.229901  \n",
-       "50%          0.409732      0.400151   0.409669   0.336640  \n",
-       "75%          0.471233      0.423127   0.435719   0.461883  \n",
-       "max          0.675293      0.440806   0.507760   0.684774  "
+       "count       61.000000     61.000000  61.000000  61.000000  \n",
+       "mean         0.677770      0.621770   0.619107   0.739507  \n",
+       "std          0.224464      0.175790   0.099741   0.171969  \n",
+       "min          0.058380      0.255623   0.399404   0.201198  \n",
+       "25%          0.642380      0.467525   0.536706   0.719996  \n",
+       "50%          0.793325      0.670552   0.655008   0.804698  \n",
+       "75%          0.833854      0.781331   0.675690   0.835837  \n",
+       "max          0.861058      0.835837   0.798599   0.861058  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe()"
+    "desc_data = df.describe()\n",
+    "desc_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc_data.round(4).to_csv(\"Datas/data_description.csv\")\n",
+    "desc_data.round(4).to_excel(\"Datas/data_description.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.round(4).to_excel(\"Datas/silhouette_score_data.xlsx\")"
    ]
   },
   {
