add time analysis

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,8 +9,8 @@
     "# import libraries\n",
     "import pandas as pd\n",
     "import numpy as np \n",
-    "from SOM_plus_clustering.som import SOM\n",
-    "from SOM_plus_clustering.som import kmeans\n",
+    "from SOM_plus_clustering.modules.som import SOM\n",
+    "from SOM_plus_clustering.modules.som import kmeans\n",
     "from sklearn import preprocessing\n",
     "from sklearn.metrics import silhouette_score\n",
     "import multiprocessing"
